agent self attach ability